# qqualif

./: CMakeLists.txt  CMakePresets.json  README.md  versions.txt
.github/workflows/: spack-ci.yml
cmake/: common.cmake  version.cmake
data/: all_cells.mli  cells_2D.mli  nogroup.mli  output_gmsh.mesh
doc/: prsentation_hexas.pptx
doc/exemple_1/: exemple1.xlsx  hexas.mli
doc/exemple_2/: exemple2.xlsx  hexas.mli
src/: CMakeLists.txt
src/GQGMDS/: CMakeLists.txt  GMDSQualifSerie.cpp  GQGMDS.doxygen
src/GQGMDS/cmake/: GQGMDSConfig.cmake.in
src/GQGMDS/public/GQGMDS/: GMDSQualifSerie.h
src/GQLima/: CMakeLists.txt  GQLima.doxygen  LimaQualifSerie.cpp
src/GQLima/cmake/: GQLimaConfig.cmake.in
src/GQLima/public/GQLima/: LimaQualifSerie.h
src/GQVtk/: CMakeLists.txt  GQVtk.doxygen  VtkQualifSerie.cpp
src/GQVtk/cmake/: GQVtkConfig.cmake.in
src/GQVtk/public/GQVtk/: VtkQualifSerie.h
src/GQualif/: AbstractQualifSerie.cpp  AbstractQualifSerieAdapter.cpp  AbstractQualifTask.cpp  CMakeLists.txt  GQualif.doxygen  QCalQualThread.cpp  QualifAnalysisTask.cpp  QualifHelper.cpp  QualifRangeTask.cpp
src/GQualif/cmake/: GQualifConfig.cmake.in
src/GQualif/public/GQualif/: AbstractQualifSerie.h  AbstractQualifSerieAdapter.h  AbstractQualifTask.h  QCalQualThread.h  QualifAnalysisTask.h  QualifHelper.h  QualifRangeTask.h
src/QCalQual/: CMakeLists.txt  QCalQual.qrc  QQualCal.cpp  QtCalQualMainWindow.cpp  QtCalQualMainWindow.h
src/QCalQual/cmake/: QCalQualConfig.cmake.in
src/QtQualif/: CMakeLists.txt  QtQualif.doxygen  QtQualifServices.cpp  QtQualifWidget.cpp  QtQualityDividerWidget.cpp  QtSeriesChoiceDialog.cpp
src/QtQualif/cmake/: QtQualifConfig.cmake.in
src/QtQualif/public/QtQualif/: QtQualifServices.h  QtQualifWidget.h  QtQualityDividerWidget.h  QtSeriesChoiceDialog.h
src/tests/: CMakeLists.txt  hexagen.cpp
test_link/: CMakeLists.txt  main.cpp
